2022-02-17  Ryan Haddad  <ryanhaddad@apple.com>

        [iOS] css/css-color/t422-rgba-onscreen-b.xht and css/css-color/t425-hsla-onscreen-b.xht are consistently failing
        https://bugs.webkit.org/show_bug.cgi?id=236802

        Unreviewed test gardening.

        * platform/ios/TestExpectations: Mark tests as failing.

2022-02-17  Matteo Flores  <matteo_flores@apple.com>

        [css-grid] Incorrectly stretched SVGs without an aspect-ratio.
        https://bugs.webkit.org/show_bug.cgi?id=216145

        Unreviewed test gardening.

        * TestExpectations: Adding failure expectation for tests that were missed.

2022-02-17  Truitt Savell  <tsavell@apple.com>

        Remove the Catalina specific expectation added in r289834
        https://bugs.webkit.org/show_bug.cgi?id=236619

        Unreviewed test gardening.

        * platform/mac-catalina/fonts/monospace-expected.txt: Removed.

2022-02-17  Jon Lee  <jonlee@apple.com>

        Unreviewed GPU Process bot gardening.

        * gpu-process/TestExpectations:

2022-02-17  Matt Woodrow  <mattwoodrow@apple.com>

        Copy track sizes from parent grid into subgrid
        https://bugs.webkit.org/show_bug.cgi?id=236336

        Reviewed by Dean Jackson.

        Existing test expectations updated.

        * TestExpectations:

2022-02-16  Antoine Quint  <graouts@webkit.org>

        Use the animation frame rate during animation resolution and scheduling
        https://bugs.webkit.org/show_bug.cgi?id=234202
        rdar://85983678

        Reviewed by Simon Fraser.

        Update this test to not rely on hard values but rather check that throttling
        has the expected effect of doubling the interval between frames.

        * fast/animation/css-animation-throttling-lowPowerMode-expected.txt:
        * fast/animation/css-animation-throttling-lowPowerMode.html:

2022-02-16  Tim Horton  <timothy_horton@apple.com>

        Revert r275772: inflated FloatSize memory layout unnecessarily