@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta name="fuzzy" content="maxDifference=0-1;totalPixels=0-200" />
+<meta name="fuzzy" content="maxDifference=0-75; totalPixels=0-1486" />
 <title>This tests that border-radius on html renders correctly.</title>
 <style>
   html {
