@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<meta name="fuzzy" content="maxDifference=0-42;totalPixels=11350-12150" />
+<meta name="fuzzy" content="maxDifference=0-42;totalPixels=11350-12250" />
 <style>
     div.container {
         display: inline-block;
