@@ -11,7 +11,7 @@
 	arguments. Percentage values are relative to a reference box. If no
 	reference box was specified, percentage values are relative to border-box.
 	On pass there should be a full green circle.">
-	<meta name="fuzzy" content="maxDifference=0-59; totalPixels=0-248">
+	<meta name="fuzzy" content="maxDifference=0-60; totalPixels=0-394">
 </head>
 <body>
 	<p>The test passes if there is a full green circle.</p>
