@@ -7,6 +7,7 @@
     <link rel="help" href="https://html.spec.whatwg.org/multipage/#the-li-element">
     <link rel="match" href="grouping-li-reftest-001-ref.html" />
     <meta name="assert" content="The value attribute has no effect when applied to a li element whose parent is a non-ol element." />
+    <meta name="fuzzy" content="maxDifference=0-1; totalPixels=0-5" />
 </head>
 <body>
     <h1>Description</h1>
